--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
 Changes
 =======
 
+Version 1.2.4 -- 2011/10/07
+---------------------------
+
+* When xref tables are corrupt, parse and cache all objects as a fallback.
+* Fixed a bogus assertion in layouts.
+
 Version 1.2.3 -- 2011/09/05
 ---------------------------
 
