--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,15 @@
 Changes
 =======
 
+Version 1.3.0 -- 2012/07/20
+---------------------------
+
+* Added `pdfexplore`, a tool to debug PDFs by exploring their data.
+* Don't try to group textboxes when there's too many (it takes too long).
+* Support object references as filters in streams.
+* Parse every object as soon as an objectid can't be found.
+* Improved the `STRICT`-based error handling idiom.
+
 Version 1.2.4 -- 2011/10/07
 ---------------------------
 
